--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,16 @@
         android:layout_gravity="center_horizontal"
         android:src="@drawable/ic_logo" />
 
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView5"
+        android:layout_marginTop="31dp">
+
+    </android.support.design.widget.TextInputLayout>
+
     <TextView
         android:id="@+id/textView5"
         style="@style/Base.DialogWindowTitle.AppCompat"
@@ -27,20 +37,6 @@
         android:layout_gravity="center_horizontal"
         android:text="Sadil Management" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView5"
-        android:text="Nama" />
-
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView" />
 
     <TextView
         android:id="@+id/textView2"
@@ -89,8 +85,8 @@
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toStartOf="@+id/textView5"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView3"
         android:checked="false"
         android:text="Menyanyi" />
 
@@ -117,26 +113,70 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/checkBox3"
-        android:entries="@array/alatmusik" />
+        android:layout_below="@+id/textView8"
+        android:entries="@array/Kota" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
+        style="@style/Base.TextAppearance.AppCompat.Title"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/spinner"
-        android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
-        android:text="Daftar" />
+        android:background="@drawable/bgbtn"
+        android:text="Daftar"
+        android:textColor="@android:color/white" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/button"
-        android:layout_marginTop="38dp"
+        android:layout_marginTop="28dp"
         android:layout_toEndOf="@+id/checkBox"
         android:gravity="center_horizontal"
         tools:text="Hasil" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView4"
+        android:layout_toEndOf="@+id/checkBox"
+        tools:text="Hasil2" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView"
+        android:layout_toEndOf="@+id/checkBox"
+        tools:text="Hasil3" />
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/view"
+        android:hint="Nama" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView6"
+        android:layout_toEndOf="@+id/textView2"
+        tools:text="Hasil4" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/checkBox"
+        android:text="Kota Seleksi" />
+
 
 </RelativeLayout>
